--- a/Solo Website/CSS/contact.css
+++ b/Solo Website/CSS/contact.css
@@ -11,8 +11,7 @@ CSS for the contact portion of my web page.
 /*Div. Header Styles*/
 .social > h1  {
     color: pink;
-    text-align: left;
-    padding-left: 30px;
+    text-align: center;
     font-style: italic;
     font-family:'Times New Roman', Times, serif;
     border-style: double;
@@ -33,8 +32,7 @@ CSS for the contact portion of my web page.
 
 .email > h1 {
     color: pink;
-    text-align: right;
-    padding-right: 30px;
+    text-align: center;
     font-style: italic;
     font-family:'Times New Roman', Times, serif;
     border-style: double;
@@ -45,10 +43,9 @@ CSS for the contact portion of my web page.
 /*Div. Paragraph Styles*/
 .social > p {
     color: pink;
-    text-align: left;
+    text-align: center;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: x-large;
-    padding-left: 30px;
 }
 
 .phone > p {
@@ -60,10 +57,9 @@ CSS for the contact portion of my web page.
 
 .email > p {
     color: pink;
-    text-align: right;
+    text-align: center;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: x-large;
-    padding-right: 30px;
 }
 
 /*Paragraph Styles*/
@@ -91,6 +87,12 @@ footer > p {
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-align: center;
     font-size: medium;
+}
+
+
+
+article {
+    text-align: center;
 }
 
 .flex-wrapper {
