--- a/Solo Website/CSS/workex.css
+++ b/Solo Website/CSS/workex.css
@@ -7,3 +7,49 @@ Date: December 4th 2022
 
 CSS for the work examples portion of my web page
 */
+
+
+/*Header Styles*/
+h1 {
+    color: white;
+    text-align: center;
+    font-family:'Times New Roman', Times, serif;
+    border-style: double;
+    border-color: red;
+    border-width: 5px;
+}
+
+/*Paragraph Styles*/
+p {
+    color: rgb(187, 162, 116);
+    text-align: left;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: x-large;
+    padding-left: 25px;
+}
+
+p > b {
+    color: rgb(177, 170, 170);
+    font-style: italic;
+}
+
+section > p {
+    text-align: left;
+    padding-left: 10px;
+    color: rgb(192, 192, 192);
+    
+}
+
+section > aside > p {
+    text-align: center;
+    padding-right: 30px;
+    
+}
+
+footer > p {
+    background-color: orangered;
+    color: white;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-align: center;
+    font-size: medium;
+}
